--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My WebPage</title>
+    <title>Bulls Cycle</title>
 
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link
